+ Added: [Suggestion] Don't allow transferring of land ownership if players max chunks limit is too low for the land. Takes level and nation into account.
+ Added: [Suggestion] Return none from translation file for %lands_land_role% if wilderness