@@ -1,6 +1,7 @@
-# Enable nations? (Command: /Nations)
+# Enable nations? (Command: /nations)
 # NOTE: This setting requires server reload / restart.
 enabled: true
+
 
 # Customize the creation
 creation:
@@ -11,10 +12,20 @@ creation:
   # This option requires server reload / restart.
   level: 5
 
-# /Nations rename options
+# /nations rename options
 rename:
+  # Costs x each time the name is changed.
   costs_2: 10000.0
-  cooldown_rename_time: 15m
+  # Nation needs to wait x until they can change their name again.
+  cooldown_rename_time: 1d
+
+
+# Land related settings
+land:
+  # Set a maximum distance between the capital and the land that they want to invite to their nation.
+  # 0 disables this option.
+  max-distance: 0
+
 
 # Let lands, which are part of a nation pay taxes.
 # If a land is member of a nation they won't pay upkeep to the server anymore. Instead
